# iplotlogging

./: .gitattributes  .gitignore  MANIFEST.in  README.md  copyright.md.jinja2  environ.sh  pyproject.toml  set_version.sh  setup.cfg  setup.py  setupLogger.py  versioneer.py
ci-build/: st00-header.sh  st01-install.sh  st02-test.sh  st03-codecov.sh
iplotLogging/: __init__.py  _version.py  setupLogger.py
logging/: setupLogger.py
logging2/: setupLogger.py
tests/: test_iplotlogging.py
